corrections added
