# docs/swagger.yaml
@@ -95,8 +95,6 @@ definitions:
         items:
           $ref: '#/definitions/dto.Exam'
         type: array
-      statusCode:
-        type: integer
     type: object
   dto.ListQuestionResponse:
     properties:
@@ -186,8 +184,8 @@ definitions:
 info:
   contact: {}
 paths:
-  /examservice/answers/submit:
-    post:
+  /examservice/answers/submit/{id}:
+    put:
       consumes:
       - application/json
       description: Creates or updates an answer based on the provided request body.
@@ -197,10 +195,9 @@ paths:
         name: X-USER-ID
         required: true
         type: string
-      - description: ID of the question to update
+      - description: ID of the answer to update
         in: path
         name: id
-        required: true
         type: string
       - description: Answer request body
         in: body
@@ -367,7 +364,7 @@ paths:
         name: X-USER-ID
         required: true
         type: string
-      - description: ID of the question to update
+      - description: ID of the exam to update, if applicable
         in: path
         name: id
         type: string
@@ -464,7 +461,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Deletes a question by its ID.
+      description: Deletes a question based on the provided ID.
       parameters:
       - description: Question ID
         in: path
@@ -559,7 +556,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: Successfully created or updated questions
+          description: Successfully created or updated question
           schema:
             type: string
         "400":
